--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,12 @@ button:disabled {
     margin-top: 20px;
     font-size: 1.2em;
 }
+
+#preloader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+    font-weight: bold;
+}
