--- a/styles.css
+++ b/styles.css
@@ -173,18 +173,22 @@ button:disabled {
     display: none;
 }
 
-#progress-bar {
+#progress-bar, #progress-bar-top, #progress-bar-bottom {
     width: 100%;
     background-color: #ddd;
     border-radius: 5px;
     overflow: hidden;
 }
 
-#progress {
+#progress, #time-progress-top, #time-progress-bottom {
     height: 20px;
     background-color: #28A745; /* Green for top progress bar */
     width: 0%;
     transition: width 0.3s;
+}
+
+#time-progress-top, #time-progress-bottom {
+    background-color: red; /* Red for time progress bar */
 }
 
 .feedback {
@@ -214,75 +218,19 @@ button:disabled {
 }
 
 @keyframes fadeOut {
-    0% {
+    from {
         opacity: 1;
     }
-    100% {
+    to {
         opacity: 0;
     }
 }
 
 @keyframes fadeIn {
-    0% {
+    from {
         opacity: 0;
     }
-    100% {
+    to {
         opacity: 1;
     }
-}
-
-#loading-bar {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 0;
-    height: 5px;
-    background-color: #28A745; /* Green for bottom loading bar */
-    transition: width 2s linear;
-    z-index: 20; /* Ensure it is above other elements */
-}
-
-/* Navigation buttons container */
-.navigation-buttons {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-}
-
-.navigation-buttons button {
-    flex: 1;
-    margin: 0 10px;
-}
-
-/* Timer display */
-#timer {
-    font-size: 1.2em;
-    margin-bottom: 20px;
-}
-
-/* Final screen styles */
-#question-container h2 {
-    color: #28A745; /* Green color for the congratulations message */
-    font-size: 2em;
-    margin-bottom: 0.5em;
-}
-
-#question-container p {
-    font-size: 1.2em;
-    margin-bottom: 1em;
-}
-
-#restart-button {
-    padding: 15px 30px;
-    background-color: #007BFF;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    font-size: 1.2rem;
-    transition: background-color 0.3s;
-}
-
-#restart-button:hover {
-    background-color: #0056b3;
 }
