--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,30 @@ p {
     color: #666;
 }
 
+.input-username{
+    margin-bottom: 20px;
+    text-align: left;
+}
+.input-username label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #333;
+}
+.input-username input {
+    width: calc(100% - 20px);
+    padding: 10px;
+    margin-top: 10px;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    color: #333;
+}
+.input-error{
+    border: 1px solid red;
+}
+
 .select-category,
 .select-difficulty {
     margin-bottom: 20px;
