--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ p {
     width: calc(100% - 20px);
     padding: 10px;
     margin-top: 10px;
+    margin-bottom: 10px;
     font-size: 1rem;
     border-radius: 5px;
     border: 1px solid #ccc;
@@ -59,7 +60,10 @@ p {
     color: #333;
 }
 .input-error{
-    border: 1px solid red;
+    display: none;
+    font-size: 1rem;
+    color: red;
+    opacity: 0.7;
 }
 
 .select-category,
